[gd_scene load_steps=12 format=3 uid="uid://caa1tt7gmfscc"]

[ext_resource type="PackedScene" uid="uid://cboono7eq3fvc" path="res://Packed Scenes/GUI/Default Button.tscn" id="1_42oty"]
[ext_resource type="Script" path="res://Scripts/GUI/MainMenuScript.gd" id="1_yn63n"]
[ext_resource type="Shader" path="res://Shaders/HudShader.gdshader" id="3_hdljr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hsml3"]
shader = ExtResource("3_hdljr")
shader_parameter/base_alpha = 2.0
shader_parameter/albedo = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_mvmyl"]
resource_name = "Boot Up"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu/Main Buttons:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.35, 0.65),
"transitions": PackedFloat32Array(2.07053, 6.9644, 1, 1),
"update": 0,
"values": [Vector2(-32, 110), Vector2(16, 110), Vector2(0, 110), Vector2(0, 110)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main Menu/Main Buttons:anchor_right")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35, 0.65),
"transitions": PackedFloat32Array(1, 0.297302, 1),
"update": 0,
"values": [0.0, 0.0, 0.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Options:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-256, 0)]
}

[sub_resource type="Animation" id="Animation_qw3ra"]
resource_name = "Main Menu"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main Menu/Main Buttons:anchor_right")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Main Menu/Main Buttons:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 110)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Options:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(-0.00612828, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-256, 0), Vector2(-256, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ra4av"]
_data = {
"Boot Up": SubResource("Animation_mvmyl"),
"Main Menu": SubResource("Animation_qw3ra")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2kiv5"]
animation = &"Boot Up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i3ct8"]
animation = &"Main Menu"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_160tr"]
fadeout_time = 0.1

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_to2gf"]
graph_offset = Vector2(-538, 25)
nodes/Animation/node = SubResource("AnimationNodeAnimation_i3ct8")
nodes/Animation/position = Vector2(-180, 140)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_2kiv5")
"nodes/Animation 2/position" = Vector2(-181, 267)
"nodes/Main Shot/node" = SubResource("AnimationNodeOneShot_160tr")
"nodes/Main Shot/position" = Vector2(-20, 100)
nodes/output/position = Vector2(180, 100)
node_connections = [&"Main Shot", 0, &"Animation", &"Main Shot", 1, &"Animation 2", &"output", 0, &"Main Shot"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yn63n")

[node name="Main Menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main Buttons" type="VBoxContainer" parent="Main Menu"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 1.0
offset_top = -2.0
offset_right = 12.0
grow_vertical = 2

[node name="Start" parent="Main Menu/Main Buttons" instance=ExtResource("1_42oty")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")

[node name="Options" parent="Main Menu/Main Buttons" instance=ExtResource("1_42oty")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Start")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Start")
text = "Options
"

[node name="Quit" parent="Main Menu/Main Buttons" instance=ExtResource("1_42oty")]
layout_mode = 2
focus_neighbor_left = NodePath(".")
focus_neighbor_top = NodePath("../Options")
focus_neighbor_right = NodePath(".")
focus_neighbor_bottom = NodePath("../Start")
focus_next = NodePath("../Start")
focus_previous = NodePath("../Options")
text = "Quit
"

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_right = -256.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Options"]
material = SubResource("ShaderMaterial_hsml3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Options"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.4
anchor_bottom = 1.0
offset_top = -104.0
offset_right = 12.0
offset_bottom = -11.0
grow_vertical = 2

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ra4av")
}
tree_root = SubResource("AnimationNodeBlendTree_to2gf")
anim_player = NodePath("../AnimationPlayer")
"parameters/Main Shot/active" = false
"parameters/Main Shot/internal_active" = false
"parameters/Main Shot/request" = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ra4av")
}

[connection signal="focus_entered" from="Main Menu/Main Buttons/Start" to="." method="on_grab_focus"]
[connection signal="pressed" from="Main Menu/Main Buttons/Start" to="." method="send_to_test_room"]
[connection signal="focus_entered" from="Main Menu/Main Buttons/Options" to="." method="on_grab_focus"]
[connection signal="focus_entered" from="Main Menu/Main Buttons/Quit" to="." method="on_grab_focus"]
[connection signal="pressed" from="Main Menu/Main Buttons/Quit" to="." method="quit_game"]
